# RustPeek

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  run_samples.bat  test_fix.bat  test_fix.sh
.github/workflows/: release.yml
samples/01_syntax_errors/: Cargo.toml
samples/01_syntax_errors/src/: lib.rs
samples/02_missing_mod_file/: Cargo.toml
samples/02_missing_mod_file/src/: helpers.rs  lib.rs
samples/03_unresolved_imports/: Cargo.toml
samples/03_unresolved_imports/src/: handlers.rs  models.rs
samples/04_struct_fields/: Cargo.toml
samples/04_struct_fields/src/: lib.rs
samples/05_enum_variants/: Cargo.toml
samples/05_enum_variants/src/: lib.rs
samples/06_arg_count/: Cargo.toml
samples/06_arg_count/src/: lib.rs
samples/07_visibility/: Cargo.toml
samples/07_visibility/src/: consumer.rs  inner.rs  lib.rs
samples/08_did_you_mean/: Cargo.toml
samples/08_did_you_mean/src/: engine.rs  lib.rs  parser.rs
samples/09_external_deps_silent/: Cargo.toml
samples/09_external_deps_silent/src/: lib.rs
samples/10_macros_silent/: Cargo.toml
samples/10_macros_silent/src/: lib.rs
samples/11_clean_crate/: Cargo.toml
samples/11_clean_crate/src/: lib.rs  models.rs  services.rs
samples/12_nested_modules/: Cargo.toml
samples/12_nested_modules/src/: api.rs
samples/12_nested_modules/src/db/: connection.rs  mod.rs  queries.rs
samples/13_not_imported/: Cargo.toml
samples/13_not_imported/src/: consumer.rs  lib.rs  models.rs
src/: discovery.rs  fixer.rs  indexer.rs  lib.rs  main.rs  parser.rs  types.rs  validator.rs
