[package]
name = "rustpeek"
version = "0.1.0"
edition = "2024"
description = "Syn-based crate indexer for lightweight Rust validation without compilation"

[dependencies]
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
